Made some changes to previous exercise and completed new project

--- a/Petal Power Inventory/PetalPowerInventory.ipynb
+++ b/Petal Power Inventory/PetalPowerInventory.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Petal Power Inventory"
+    "# Petal Power Inventory\n",
+    "You’re the lead data analyst for a chain of gardening stores called Petal Power. Help them analyze their inventory!"
    ]
   },
   {
@@ -13,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Answer Customer Emails"
+    "### Answer Customer Emails"
    ]
   },
   {
