--- a/Page Visits Funnel/Page_Funnel_Visits_Solution.ipynb
+++ b/Page Visits Funnel/Page_Funnel_Visits_Solution.ipynb
@@ -508,7 +508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -522,7 +522,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "873eb133c515e8a80c8d7562c7ff99f93ffd9a00f5a46f7a698b5d846a2b978f"
+   }
   }
  },
  "nbformat": 4,
